# backend/internal/model/template.go
@@ -3,13 +3,12 @@ package model
 import "time"
 
 type Template struct {
-	ID              int64
-	Name            string
-	DescriptionJSON []byte
-	CreatedAt       time.Time
+	ID           string
+	TemplateJSON []byte
+	CreatedAt    time.Time
 }
 
 type CreateTemplateParams struct {
-	Name            string
-	DescriptionJSON []byte
+	ID           string
+	TemplateJSON []byte
 }
